feat: update profile pic and update password
