# src/models/user.model.ts
@@ -4,18 +4,53 @@ import { encrypt } from "../utils/encryption";
 import { renderMailHTML, sendMail } from "../utils/mail/mail";
 import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
 import { ROLES } from "../utils/constant";
+import * as Yup from "yup";
+
+const validatePassword = Yup.string()
+  .required()
+  .min(8, "Password must be at least 8 characters")
+  .test(
+    "at-least-one-number",
+    "Password must contain at least one number",
+    (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }
+  );
+
+const validateConfirmPassword = Yup.string()
+  .required()
+  .oneOf([Yup.ref("password"), ""], "Password not match");
 
 export const USER_MODEL_NAME = "User";
 
-export interface User {
-  fullName: string;
-  userName: string;
-  email: string;
-  password: string;
-  role: string;
-  profilePicture: string;
+export const userLoginDTO = Yup.object({
+  identifier: Yup.string().required(),
+  password: validatePassword,
+});
+
+export const userUpdatePasswordDTO = Yup.object({
+  oldPassword: validatePassword,
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+});
+
+export const userDTO = Yup.object({
+  fullName: Yup.string().required(),
+  userName: Yup.string().required(),
+  email: Yup.string().email().required(),
+  password: validatePassword,
+  confirmPassword: validateConfirmPassword,
+});
+
+export type TypeUser = Yup.InferType<typeof userDTO>;
+
+export interface User extends Omit<TypeUser, "confirmPassword"> {
   isActive: boolean;
   activationCode: string;
+  role: string;
+  profilePicture: string;
   createdAt?: string;
 }
 
@@ -30,10 +65,12 @@ const UserSchema = new Schema<User>(
     userName: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     email: {
       type: Schema.Types.String,
       required: true,
+      unique: true,
     },
     password: {
       type: Schema.Types.String,
@@ -70,8 +107,8 @@ UserSchema.pre("save", function (next) {
 
 UserSchema.post("save", async function (doc, next) {
   try {
-    const user = doc.toObject(); // Ubah ke objek biasa
-
+    const user = doc;
+    console.log("Send Email to: ", user);
     const contentMail = await renderMailHTML("registration-success.ejs", {
       userName: user.userName,
       fullName: user.fullName,
@@ -79,7 +116,6 @@ UserSchema.post("save", async function (doc, next) {
       createdAt: user.createdAt,
       activationLink: `${CLIENT_HOST}/auth/activation?code=${user.activationCode}`,
     });
-
     await sendMail({
       from: EMAIL_SMTP_USER,
       to: user.email,
@@ -87,7 +123,7 @@ UserSchema.post("save", async function (doc, next) {
       html: contentMail,
     });
   } catch (error) {
-    console.log("error >", error);
+    console.log(error);
   } finally {
     next();
   }
@@ -95,9 +131,8 @@ UserSchema.post("save", async function (doc, next) {
 
 UserSchema.methods.toJSON = function () {
   const user = this.toObject();
-
   delete user.password;
-
+  delete user.activationCode;
   return user;
 };
 
